--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,10 @@ spring:
   profiles:
     active: db
   datasource:
-    url: jdbc:h2:mem:expensedb;DB_CLOSE_DELAY=-1 # URL for h2 database in memory mode
-    driver-class-name: org.h2.Driver # JDBC Driver for h2
-    username: sa
-    password:
-    platform: h2
+    url: jdbc:postgresql://ep-raspy-mouse-a1r0te7a.ap-southeast-1.aws.neon.tech/expensedb?sslmode=require
+    driver-class-name: org.postgresql.Driver
+    username: expensedb_owner
+    password: npg_bVI1Ldstv0YK
   h2:
     console:
       enabled: true
@@ -18,4 +17,4 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
